--- a/server/rebar.config
+++ b/server/rebar.config
@@ -2,6 +2,8 @@
 {erl_opts, [debug_info]}.
 {deps, [
   {mochiweb, ".*",
-   {git, "git://github.com/mochi/mochiweb.git", {branch, "master"}}}]}.
+   {git, "git://github.com/mochi/mochiweb.git", {branch, "master"}}},
+  {riakc, ".*",
+   {git, "git://github.com/basho/riak-erlang-client", "HEAD"}} ]}.
 {cover_enabled, true}.
 {eunit_opts, [verbose, {report,{eunit_surefire,[{dir,"."}]}}]}.
