--- a/server/rebar.config
+++ b/server/rebar.config
@@ -4,6 +4,7 @@
   {mochiweb, ".*",
    {git, "git://github.com/mochi/mochiweb.git", {branch, "master"}}},
   {riakc, ".*",
-   {git, "git://github.com/basho/riak-erlang-client", "HEAD"}} ]}.
+   {git, "git://github.com/basho/riak-erlang-client", "HEAD"}} 
+  								]}.
 {cover_enabled, true}.
 {eunit_opts, [verbose, {report,{eunit_surefire,[{dir,"."}]}}]}.
